--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -14,6 +15,8 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:padding="8dp"
+        app:cardElevation="10dp"
+        android:layout_marginTop="64dp"
         android:layout_margin="8dp"
         android:orientation="vertical">
 
@@ -33,6 +36,7 @@
                 android:layout_gravity="center"
                 android:clickable="true"
                 android:elevation="32dp"
+                android:layout_margin="8dp"
                 android:innerRadius="0dp"
                 android:onClick="Search"
                 android:shape="ring"
@@ -84,19 +88,24 @@
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:padding="8dp"
+            app:cardElevation="10dp"
+            android:layout_marginTop="64dp"
             android:layout_margin="8dp"
             android:orientation="vertical">
 
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+               >
                 <TextView
+                    
                     android:layout_width="270dp"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp"
-                    android:layout_gravity="center"
+                    android:layout_height="match_parent"
+                    android:padding="10dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
                     android:text="This will allow our users to just scan any visiting card and get their contact added directly."
                     />
 
@@ -110,10 +119,11 @@
                     android:layout_gravity="center"
                     android:clickable="true"
                     android:elevation="32dp"
+                    android:layout_margin="8dp"
                     android:innerRadius="0dp"
                     android:onClick="Search"
                     android:shape="ring"
-
+                    android:layout_alignParentRight="true"
                     android:thicknessRatio="1.9"
                     app:cardCornerRadius="50dp"
                     app:cardElevation="16dp">
@@ -147,10 +157,86 @@
 
                 </android.support.v7.widget.CardView>
 
+            </RelativeLayout>
+
+
+        </android.support.v7.widget.CardView>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:padding="8dp"
+            app:cardElevation="10dp"
+            android:layout_marginTop="64dp"
+            android:layout_margin="8dp"
+            android:orientation="vertical">
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.CardView
+
+                    android:id="@+id/view3"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center"
+                    android:clickable="true"
+                    android:elevation="32dp"
+                    android:innerRadius="0dp"
+                    android:layout_margin="8dp"
+                    android:onClick="Search"
+                    android:shape="ring"
+
+                    android:thicknessRatio="1.9"
+                    app:cardCornerRadius="50dp"
+                    app:cardElevation="16dp">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center">
+
+                        <ImageView
+                            android:id="@+id/Scan_poster"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true" />
+
+
+                        <TextView
+                            android:id="@+id/tvposter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/Scan_poster"
+                            android:layout_centerHorizontal="true"
+                            android:layout_gravity="center_horizontal"
+                            android:fontFamily="sans-serif"
+                            android:text="Scan Poster"
+                            android:textColor="#616161"
+                            android:textSize="15sp"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dp"
+                    android:layout_gravity="center"
+                    android:text="Scan the poster and save the details of the event in the calender to get the reminder."
+                    />
             </LinearLayout>
 
 
         </android.support.v7.widget.CardView>
+
+
+
 
     </LinearLayout>
 </ScrollView>
