--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/idExtractText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
@@ -35,10 +36,8 @@
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:layout_margin="8dp"
-                    android:clickable="true"
                     android:elevation="32dp"
                     android:innerRadius="0dp"
-                    android:onClick="Search"
                     android:shape="ring"
 
                     android:thicknessRatio="1.9"
@@ -85,6 +84,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/idScanContact"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
@@ -123,10 +123,8 @@
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:layout_margin="8dp"
-                    android:clickable="true"
                     android:elevation="32dp"
                     android:innerRadius="0dp"
-                    android:onClick="Search"
                     android:shape="ring"
                     android:thicknessRatio="1.9"
                     app:cardCornerRadius="50dp"
@@ -167,6 +165,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/idScanPoster"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
@@ -191,10 +190,8 @@
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
                     android:layout_margin="8dp"
-                    android:clickable="true"
                     android:elevation="32dp"
                     android:innerRadius="0dp"
-                    android:onClick="Search"
                     android:shape="ring"
 
                     android:thicknessRatio="1.9"
